--- a/vignettes/spatial_topology.Rmd
+++ b/vignettes/spatial_topology.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Topology
 
-Objects in the `sp` package are complex: the R object is composed of a set of geometric objects, organized as a table of attributes belonging to those. You only have one type of topology in each, and these are points, lines, or polygons.  Each geometric object in turn may be simple or quite complex, a simple case is a filled shape, such as as a property boundary. Much more complex is a continent, composed of many land masses separated by water, and on those polygon land masses may be a lake, with an island inside that lake, and a lake on that island. A similar complexity exists for lines, a single geometric object may be set of long connected "line strings" that aren't spatially connected. Points are slightly less complex, but see {...} for how Spatial[Multi]Points are defined in a fundamentally different way.  We term these geometric objects "polygons", "lines" and "points" but beware of the slippery concept between simple and complex multi-part geometries. A single polygon in the data frame may be composed of many simple polygon rings. 
+Objects in the `sp` package are complex: the R object is composed of a set of geometric objects, organized as a table of attributes belonging to those. Even the terminology is complex, we need a fairly sophisticated nomenclature to talk about the objects and their geometry and other attributes. You only have one type of topology in each, and these are points, lines, or polygons.  Each geometric object in turn may be simple or quite complex, a simple case is a filled shape, such as as a property boundary. Much more complex is a continent, composed of many land masses separated by water, and on those polygon land masses may be a lake, with an island inside that lake, and a lake on that island. A similar complexity exists for lines, a single geometric object may be set of long connected "line strings" that aren't spatially connected. Points are slightly less complex, but see {...} for how Spatial[Multi]Points are defined in a fundamentally different way.  We term these geometric objects "polygons", "lines" and "points" but beware of the slippery concept between simple and complex multi-part geometries. A single polygon in the data frame may be composed of many simple polygon rings. 
 
 Draw an analogy to multiple continents and a simpler map of islands in a peninsula, and a cadastre. Use these maps to explain the relation of layer, object, part, coordinate. 
 
